docs/3.5/api/com.rakuten.tech.mobile.miniapp.js/-mini-app-message-bridge/index.md
[miniapp](../../index.md) / [com.rakuten.tech.mobile.miniapp.js](../index.md) / [MiniAppMessageBridge](./index.md)

# MiniAppMessageBridge

`open class MiniAppMessageBridge`

Bridge interface for communicating with mini app.

### Constructors

| [&lt;init&gt;](-init-.md) | Bridge interface for communicating with mini app.`MiniAppMessageBridge()` |

### Functions

| [allowScreenOrientation](allow-screen-orientation.md) | Allow miniapp to change screen orientation. The default setting is false.`fun allowScreenOrientation(isAllowed: `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html) |
| [getUniqueId](get-unique-id.md) | Get provided id of mini app for any purpose. You can also throw an [Exception](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-exception/index.html) from this method to pass an error message to the mini app.`open fun ~~getUniqueId~~(): `[`String`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)<br>Get provided id of mini app for any purpose.`open fun getUniqueId(onSuccess: (uniqueId: `[`String`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`, onError: (message: `[`String`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html) |
| [postMessage](post-message.md) | `fun postMessage(jsonStr: `[`String`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html) |
| [requestCustomPermissions](request-custom-permissions.md) | Post custom permissions request.`open fun requestCustomPermissions(permissionsWithDescription: `[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`Pair`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-pair/index.html)`<`[`MiniAppCustomPermissionType`](../../com.rakuten.tech.mobile.miniapp.permission/-mini-app-custom-permission-type/index.md)`, `[`String`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)`>>, callback: (`[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`Pair`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-pair/index.html)`<`[`MiniAppCustomPermissionType`](../../com.rakuten.tech.mobile.miniapp.permission/-mini-app-custom-permission-type/index.md)`, `[`MiniAppCustomPermissionResult`](../../com.rakuten.tech.mobile.miniapp.permission/-mini-app-custom-permission-result/index.md)`>>) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html) |
| [requestDevicePermission](request-device-permission.md) | Post device permission request from external.`open fun requestDevicePermission(miniAppPermissionType: `[`MiniAppDevicePermissionType`](../../com.rakuten.tech.mobile.miniapp.permission/-mini-app-device-permission-type/index.md)`, callback: (isGranted: `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html) |
| [setAdMobDisplayer](set-ad-mob-displayer.md) | Set implemented ads displayer. Can use the default provided class from sdk [AdMobDisplayer](../../com.rakuten.tech.mobile.miniapp.ads/-ad-mob-displayer/index.md).`fun setAdMobDisplayer(adDisplayer: `[`MiniAppAdDisplayer`](../../com.rakuten.tech.mobile.miniapp.ads/-mini-app-ad-displayer/index.md)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html) |
| [setChatBridgeDispatcher](set-chat-bridge-dispatcher.md) | Set implemented chatBridgeDispatcher. Can use the default provided class from sdk [ChatBridgeDispatcher](../../com.rakuten.tech.mobile.miniapp.js.chat/-chat-bridge-dispatcher/index.md).`fun setChatBridgeDispatcher(bridgeDispatcher: `[`ChatBridgeDispatcher`](../../com.rakuten.tech.mobile.miniapp.js.chat/-chat-bridge-dispatcher/index.md)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html) |
| [setUserInfoBridgeDispatcher](set-user-info-bridge-dispatcher.md) | Set implemented userInfoBridgeDispatcher. Can use the default provided class from sdk [UserInfoBridgeDispatcher](../../com.rakuten.tech.mobile.miniapp.js.userinfo/-user-info-bridge-dispatcher/index.md).`fun setUserInfoBridgeDispatcher(bridgeDispatcher: `[`UserInfoBridgeDispatcher`](../../com.rakuten.tech.mobile.miniapp.js.userinfo/-user-info-bridge-dispatcher/index.md)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html) |
| [shareContent](share-content.md) | Share content info [ShareInfo](#). This info is provided by mini app.`open fun shareContent(content: `[`String`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)`, callback: (isSuccess: `[`Boolean`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-boolean/index.html)`, message: `[`String`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-string/index.html)`?) -> `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html)`): `[`Unit`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html) |

